# aoc

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json
.devcontainer/: Dockerfile  devcontainer.json
2015/day1/: CMakeLists.txt  day1.cpp  input.hpp
2015/day2/: CMakeLists.txt  day2.cpp  input.hpp
2015/day3/: CMakeLists.txt  day3.cpp  input.hpp
2015/day4/: CMakeLists.txt  day4.cpp  input.hpp
2015/day5/: CMakeLists.txt  day5.cpp  input.hpp
2015/day6/: CMakeLists.txt  day6.cpp  input.hpp
2015/day7/: CMakeLists.txt  day7.cpp  input.hpp
2015/day8/: CMakeLists.txt  day8.cpp  input.hpp
cmake/: Ccache.cmake  ReportVariable.cmake  Toolchain.cmake
cmake/toolchains/: common.cmake  gcc.cmake  sanitizers.cmake  warnings.cmake
